<resources>
    <string name="app_name">asrama</string>
    <string name="login">LOGIN</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="data_mahasiswa">Data Mahasiswa</string>
    <string name="kriteria">Kriteria</string>
    <string name="tentang_pengembang">Tentang Pengembang</string>
    <string name="peraturan_asrama">Peraturan Asrama</string>
    <string name="memasukkan_data_mahasiswa">Memasukkan Data Mahasiswa</string>
    <string name="absen_rutin">Absen Rutin</string>
    <string name="absen_non_rutin">Absen Non Rutin</string>
    <string name="pelanggaran">Pelanggaran</string>
    <string name="nim_mahasiswa">NIM Mahasiswa</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="hapus">Hapus</string>
    <string name="tabel_nilai_x">Tabel Nilai X</string>
    <string name="catatan">Catatan</string>
    <string name="nama">Nama</string>
    <string name="tabel_pembobotan">Tabel Pembobotan</string>
    <string name="tabel_normalisasi">Tabel Normalisasi</string>
    <string name="tabel_nilai_ideal">Tabel Nilai Ideal</string>
    <string name="tabel_jarak">Tabel Jarak</string>
    <string name="tabel_perankingan">Tabel Perankingan</string>
    <string name="positif">Positif</string>
    <string name="negatif">Negatif</string>
    <string name="peraturan">PERATURAN</string>
    <string name="value">VALUE</string>
    <string name="ranking">RANGKING</string>
    <string name="klasifikasi">KLASIFIKASI</string>
    <string-array name="data_nim">
        <item>"170441100012"</item>
        <item>"170441100024"</item>
        <item>"170441100029"</item>
        <item>"170441100056"</item>
    </string-array>
    <string-array name="data_nama">
        <item>"Muhammad Amfahtori Wijarnoko"</item>
        <item>"Ahmad Try Bayu Al Haq"</item>
        <item>"Linawati"</item>
        <item>"Moh. Yusril Ihza Maulana"</item>
    </string-array>
    <string-array name="data_peran">
        <item>"Perhitungan Manual\nDokumentasi Laporan"</item>
        <item>"Desain UI\nPrototipe"</item>
        <item>"Desain Sistem"</item>
        <item>"Programmer"</item>
    </string-array>
    <string-array name="data_email">
        <item>"170441100012@student.trunojoyo.ac.id"</item>
        <item>"170441100024@student.trunojoyo.ac.id"</item>
        <item>"170441100029@student.trunojoyo.ac.id"</item>
        <item>"170441100056@student.trunojoyo.ac.id"</item>
    </string-array>
    <array name="data_photo">
        <item>@drawable/icuser</item>
        <item>@drawable/icuser</item>
        <item>@drawable/icuser</item>
        <item>@drawable/icuser</item>
    </array>
</resources>
