<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <ImageView
        android:id="@+id/bg_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_banner_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selamat_datang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/selamat_datang"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_shape"
        app:layout_constraintStart_toEndOf="@+id/selamat_datang"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/robotoslabbold"
        android:text="Linawati"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_add_mhs"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_card"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_kriteria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="87dp"
                android:layout_height="87dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/data_mahasiswa"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_add_kriteria"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bg_card"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="87dp"
                android:layout_height="87dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_kriteria" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/kriteria"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hasil_perthitungan"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_card"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_peraturan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_mhs">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="87dp"
                android:layout_height="87dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_hasil" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Hasil perhitungan"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_peraturan"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bg_card"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_kriteria">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="87dp"
                android:layout_height="87dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_rules" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/peraturan_asrama"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_kosong"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        app:cardCornerRadius="16dp"
        android:background="@drawable/bg_card"
        app:layout_constraintEnd_toStartOf="@+id/btn_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hasil_perthitungan" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_about"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bg_card"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_peraturan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="87dp"
                android:layout_height="87dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tentang_pengembang"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>